very frustrating layout issues, making progress, difference b/t FF & Chrome devtools responsive view

--- a/src/app.scss
+++ b/src/app.scss
@@ -54,19 +54,12 @@
     }
 }
 
-html {
-    max-width: 100vw;
-    width    : 100%;
-}
 
-body {
-    // background: rgba(14,20,35,1);
-}
 
-.main {
-    display        : flex;
-    flex-direction : column;
-    justify-content: center;
-    align-items    : center;
-    // font-family    : 'Montserrat', sans-serif;
-}
+// .main {
+//     display        : flex;
+//     flex-direction : column;
+//     justify-content: center;
+//     align-items    : center;
+//     // font-family    : 'Montserrat', sans-serif;
+// }
